Test of TheaterMgr

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,6 +1,9 @@
 group("root") {
   deps = [
+    "//util:util",
     "//dataEntities:dataEntities",
+    "//interaction:interaction",
     "//test:testDataEntities",
+    "//test:testInteraction",
   ]
 }
